# libpng-loader

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.libpng  README.md  libpng-loader.c  libpng-loader.h
.github/workflows/: test.yml
script/: generate.py  libpng-loader-base.h
test/: CMakeLists.txt  libpng_dummy.c  load_test.c  test_load_fail.c  test_read.c  test_threading.c  test_write.c
test/cross_compiled_test/: CMakeLists.txt
test/dummy_libs/: libpng_dummy_linked.c  libz_dummy.c
